<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Easy English</string>
    <string name="loading">Yükleniyor</string>
    <string name="went_wrong">Hata: Bir şeyler ters gitti. Lütfen daha sonra tekrar dene.</string>
    <string name="previous">Önceki</string>
    <string name="next">Sonraki</string>
    <string name="okay">Tamam</string>
    <string-array name="words">

        <item>End</item>
        <item>Congratulations, you have finished the words :)</item>
    </string-array>
    <string name="hi_you_can_support_us_by_either_rate_the_app_or_suggest_the_app_to_your_friends">Merhaba, uygulamaya puan vererek veya uygulamayı arkadaşlarına önererek bize destek olabilirsin.</string>
    <string name="go_back">Geri dön</string>
    <string name="you_finished_words">Tebrikler, tüm kartları bitirdin</string>
    <string name="start_again">Yeniden başla</string>
    <string name="home">Ana sayfa</string>
    <string name="restart">Sıfırla</string>
    <string name="list">Liste</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="do_you_really_want_to_restart_the_cards">Gerçekten kartları sıfırlamak istiyor musun?</string>
</resources>