<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:ignore="Overdraw">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/you_finished_words"
        android:textColor="@color/colorFive"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/congratulations" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_finish_startAgainMBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/acme"
        android:text="@string/start_again"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_finish_homeMBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/acme"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>
