<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_settings_restartLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="2"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_restart" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/restart"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/dialog_settings_listLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="2"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_list" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/list"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>
