<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="wordMeaning"
            type="String" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="isRestartFABGone"
            type="Boolean" />

        <variable
            name="isListFABGone"
            type="Boolean" />

        <variable
            name="isRestartMTVGone"
            type="Boolean" />

        <variable
            name="isListMTVGone"
            type="Boolean" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_4">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fragment_word_wordMeaningMCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/acme"
                    android:gravity="center"
                    android:text="@{wordMeaning}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fragment_word_listFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="158dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{onClickListener::onClick}"
                android:visibility="@{isListFABGone ? View.INVISIBLE : View.VISIBLE}"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_word_wordMeaningMCV"
                app:srcCompat="@drawable/ic_list"
                app:tint="@color/colorPrimaryDark" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fragment_word_restartFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{onClickListener::onClick}"
                android:visibility="@{isRestartFABGone ? View.INVISIBLE : View.VISIBLE}"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_word_wordMeaningMCV"
                app:srcCompat="@drawable/ic_restart"
                app:tint="@color/colorPrimaryDark" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fragment_word_mainFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{onClickListener::onClick}"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_word_wordMeaningMCV"
                app:srcCompat="@drawable/settings"
                app:tint="@color/colorPrimaryDark" />

            <com.lorentzos.flingswipe.SwipeFlingAdapterView
                android:id="@+id/fragment_word_mainSFAV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:max_visible="4" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_word_listMTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/acme"
                android:padding="8dp"
                android:text="@string/list"
                android:textColor="@color/colorPrimary"
                android:visibility="@{isListMTVGone ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/fragment_word_listFAB"
                app:layout_constraintEnd_toStartOf="@id/fragment_word_listFAB"
                app:layout_constraintTop_toTopOf="@id/fragment_word_listFAB" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_word_restartMTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/acme"
                android:padding="8dp"
                android:text="@string/restart"
                android:textColor="@color/colorPrimary"
                android:visibility="@{isRestartMTVGone ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/fragment_word_restartFAB"
                app:layout_constraintEnd_toStartOf="@id/fragment_word_restartFAB"
                app:layout_constraintTop_toTopOf="@id/fragment_word_restartFAB" />

            <FrameLayout
                android:id="@+id/fragment_word_soundFL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{onClickListener::onClick}"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/speaker" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
